syntax = "proto3";

package mcp.file;

service FileService {
  rpc ReadFile(ReadFileRequest) returns (ReadFileResponse);
  rpc CreateFile(CreateFileRequest) returns (CreateFileResponse);
  rpc AppendFile(AppendFileRequest) returns (AppendFileResponse);
  rpc MoveFile(MoveFileRequest) returns (MoveFileResponse);
  rpc CopyFile(CopyFileRequest) returns (CopyFileResponse);
  rpc ListDir(ListDirRequest) returns (ListDirResponse);
  rpc Stat(StatRequest) returns (StatResponse);
}

message ReadFileRequest {
  string path = 1;
  uint64 max_bytes = 2;
}

message ReadFileResponse {
  string path = 1;
  string content = 2;
  string sha256 = 3;
  uint64 size = 4;
}

message CreateFileRequest {
  string path = 1;
  string content = 2;
  string mode = 3;
  string approval_token = 4;
}

message CreateFileResponse {
  bool success = 1;
  string path = 2;
  string sha256 = 3;
  string snapshot_id = 4;
}

message AppendFileRequest {
  string path = 1;
  string content = 2;
  string approval_token = 3;
}

message AppendFileResponse {
  bool success = 1;
  uint64 new_size = 2;
  string snapshot_id = 3;
}

message MoveFileRequest {
  string from_path = 1;
  string to_path = 2;
  string approval_token = 3;
}

message MoveFileResponse {
  bool success = 1;
  string snapshot_id = 2;
}

message CopyFileRequest {
  string from_path = 1;
  string to_path = 2;
  string approval_token = 3;
}

message CopyFileResponse {
  bool success = 1;
}

message ListDirRequest {
  string path = 1;
  bool recursive = 2;
  string pattern = 3;
}

message ListDirResponse {
  repeated DirEntry entries = 1;
}

message DirEntry {
  string name = 1;
  string path = 2;
  bool is_dir = 3;
  bool is_file = 4;
  uint64 size = 5;
}

message StatRequest {
  string path = 1;
}

message StatResponse {
  bool exists = 1;
  bool is_file = 2;
  bool is_dir = 3;
  uint64 size = 4;
  uint64 modified_at = 5;
  uint64 created_at = 6;
}
